--- a/views/login.tt
+++ b/views/login.tt
@@ -24,7 +24,7 @@
     [% ELSE %]
         <div class="row" style="margin-top:20px">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <form role="form" method="post">
+                <form role="form" method="post" autocomplete="off">
                     <fieldset>
                         <h2>Please Sign In</h2>
                         <hr>
@@ -57,7 +57,7 @@
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form role="form" method="post" enctype="multipart/form-data">
+                    <form role="form" method="post" autocomplete="off" enctype="multipart/form-data">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         <h4 class="modal-title" id="myModalLabel">Reset password</h4>
@@ -81,7 +81,7 @@
         <div class="modal fade" id="modalregister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <form role="form" method="post">
+                    <form role="form" method="post" autocomplete="off">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         <h4 class="modal-title" id="myModalLabel">Request account</h4>
