--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -24,7 +24,7 @@
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         [% END %]
 
-        <title>Globally Accessible Data Store [% page %]</title>
+        <title>Linkspace [% page %]</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="[% url.css %]/bootstrap.min.css">
