--- a/views/user.tt
+++ b/views/user.tt
@@ -226,7 +226,7 @@
             <div class="modal fade" id="pwdchange" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form role="form" method="post">
+                        <form role="form" method="post" autocomplete="off">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                                 <h4 class="modal-title" id="myModalLabel">Change password</h4>
