--- a/views/edit.tt
+++ b/views/edit.tt
@@ -168,7 +168,7 @@
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="child_inc" value="[% dispcol.id %]"
-                        [% IF record.current_id AND record.fields.$colid.has_value %]checked[% END %]
+                        [% IF record.current_id AND record.fields.$colid.child_unique %]checked[% END %]
                     > <span [% label_style %]>[% label %]</span> (tick for own value, untick to inherit)
                 </label>
             </div>
