--- a/views/layout.tt
+++ b/views/layout.tt
@@ -295,6 +295,15 @@
                     <label for="green">Green:</label>
                     <textarea class="form-control monospace" id="green" name="green" rows="5">[% column.green | html_entity %]</textarea>
                 </div>
+                <div class="form-group">
+                    <label for="no_alerts_rag">Alerts:</label>
+                    <div class="checkbox">
+                        <label>
+                            <input id="no_alerts_rag" type="checkbox" name="no_alerts_rag" checked>Do not send alerts when making this update
+                                (alerts will still be sent when records are subsequently edited individually)
+                        </label>
+                    </div>
+                </div>
             </div>
             <div id="divcalc"
                 [% IF column.type != "calc" %]
@@ -303,18 +312,25 @@
                 >
                 <div class="form-group">
                     <label for="calc">Return value conversion:</label>
-                    <div class="checkbox">
-                        <label>
-                            <select class="form-control" name="return_type">
-                                <option value="string" [% IF column.return_type == "string" %]selected[% END %]>String</option>
-                                <option value="date" [% IF column.return_type == "date" %]selected[% END %]>Date</option>
-                                <option value="integer" [% IF column.return_type == "integer" %]selected[% END %]>Integer</option>
-                                <option value="numeric" [% IF column.return_type == "numeric" %]selected[% END %]>Decimal</option>
-                            </select>
-                        </label>
-                    </div>
+                    <select class="form-control" name="return_type">
+                        <option value="string" [% IF column.return_type == "string" %]selected[% END %]>String</option>
+                        <option value="date" [% IF column.return_type == "date" %]selected[% END %]>Date</option>
+                        <option value="integer" [% IF column.return_type == "integer" %]selected[% END %]>Integer</option>
+                        <option value="numeric" [% IF column.return_type == "numeric" %]selected[% END %]>Decimal</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="calc">Calculation: (<a href="" data-toggle="modal" data-target="#helpcalc">?</a>)</label>
                     <textarea class="form-control monospace" id="calc" name="calc" rows="10">[% column.calc | html_entity %]</textarea>
+                </div>
+                <div class="form-group">
+                    <label for="no_alerts_calc">Alerts:</label>
+                    <div class="checkbox">
+                        <label>
+                            <input id="no_alerts_calc" type="checkbox" name="no_alerts_calc" checked>Do not send alerts when making this update
+                                (alerts will still be sent when records are subsequently edited individually)
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
