--- a/views/view.tt
+++ b/views/view.tt
@@ -83,7 +83,7 @@
             <button id="saveview" type="submit" name="update" value="update" class="btn btn-primary" onclick="UpdateFilter()">
                 Save
             </button>
-            [% IF v.id %]
+            [% IF v.id AND NOT clone %]
                 <a href="" class="btn btn-default" data-toggle="modal" data-target="#myModal">Delete</a>
             [% END %]
         </div>
