--- a/views/layout.tt
+++ b/views/layout.tt
@@ -17,11 +17,11 @@
             <div class="form-group">
                 <label for="type">Type:</label>
                 <select class="form-control" id="type" name="type">
-                    <option value="string" [% IF column.type == "string" %]selected[% END %]>String</option>
+                    <option value="string" [% IF column.type == "string" %]selected[% END %]>Text</option>
                     <option value="intgr" [% IF column.type == "intgr" %]selected[% END %]>Integer</option>
                     <option value="date" [% IF column.type == "date" %]selected[% END %]>Date</option>
                     <option value="daterange" [% IF column.type == "daterange" %]selected[% END %]>Date range</option>
-                    <option value="enum" [% IF column.type == "enum" %]selected[% END %]>Multiple select</option>
+                    <option value="enum" [% IF column.type == "enum" %]selected[% END %]>Dropdown list</option>
                     <option value="tree" [% IF column.type == "tree" %]selected[% END %]>Tree</option>
                     <option value="file" [% IF column.type == "file" %]selected[% END %]>Document</option>
                     <option value="person" [% IF column.type == "person" %]selected[% END %]>Person</option>
