--- a/views/help.tt
+++ b/views/help.tt
@@ -33,11 +33,11 @@ values to be approved.</p>
 [% global.helptext.force_regex = BLOCK %]
 <p>Use this option to force a value to be in a particular format.
 Enter a regular expression here to define the format.
-<p>To match a value containing the word "foo":</p>
+<p>To force input of data to contain the word "foo":</p>
 <tt><pre>.*foo.*</pre></tt>
-<p>To match anything beginning with "bar":</p>
+<p>To force input of data to be anything beginning with "bar":</p>
 <tt><pre>bar.*</pre></tt>
-<p>To match a single letter followed by any number:</p>
+<p>To force input of data to be a single letter followed by any number:</p>
 <tt><pre>[A-Za-z][0-9]+</pre></tt>
 [% END %]
 
