--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -107,6 +107,7 @@
                                     <ul class="dropdown-menu">
                                         [% IF user.permission.layout %]
                                             <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Data Layout</a></li>
+                                            <li [% IF page=="table" %]class="active"[% END %]><a href="[% url.page %]/table/">Tables</a></li>
                                             <li [% IF page=="graph" %]class="active"[% END %]><a href="[% url.page %]/graph/">Graphs</a></li>
                                             <li [% IF page=="metric" %]class="active"[% END %]><a href="[% url.page %]/metric/">Metrics</a></li>
                                             <li [% IF page=="config" %]class="active"[% END %]><a href="[% url.page %]/config/">General Settings</a></li>
