--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -101,7 +101,7 @@
                                         <a href="[% url.page %]/approval/">Approval[% appcount %]</a>
                                     </li>
                                 [% END %]
-                                [% IF user.permission.layout OR user.permission.useradmin %]
+                                [% IF user.permission.layout OR user.permission.useradmin OR user.permission.audit %]
                                     <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
