--- a/views/audit.tt
+++ b/views/audit.tt
@@ -1,6 +1,7 @@
 <h2>Audit logs</h2>
 <p>
     <a href="" data-toggle="modal" data-target="#modal_filter" class="btn btn-default">Filtering...</a>
+    <a href="/audit?download" class="btn btn-default">Download</a>
 </p>
 
 <table class="table table-striped">
