Fix CSS for datepicker

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -34,9 +34,9 @@
             <link rel="stylesheet" href="[% url.css %]/ctrlo-bootstrap.css">
         [% END %]
 
-        [% IF page == "layout" OR page == "edit" OR page == "approval" %]
-        <link rel="stylesheet" href="[% url.css %]/jstree.min.css" />
-        <link rel="stylesheet" href="[% url.css %]/bootstrap-datepicker.min.css" />
+        [% IF page == "layout" OR page == "edit" OR page == "approval" OR page =="audit" %]
+            <link rel="stylesheet" href="[% url.css %]/jstree.min.css" />
+            <link rel="stylesheet" href="[% url.css %]/bootstrap-datepicker.min.css" />
         [% END %]
         [% IF page == "data" AND viewtype == "calendar" %]
             <link rel="stylesheet" href="[% url.css %]/calendar.min.css">
