--- a/views/layout.tt
+++ b/views/layout.tt
@@ -401,29 +401,12 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
        <!-- Modal -->
-        <div class="modal fade" id="modalhelp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">Field permissions</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p>[% global.helptext.layout_perms %]</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
-       <!-- Modal -->
         <div class="modal fade" id="modalhelp_match" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">Field permissions</h4>
+                        <h4 class="modal-title" id="myModalLabel">Matching field values</h4>
                     </div>
                     <div class="modal-body">
                         <p>[% global.helptext.layout_match %]</p>
