--- a/views/layout.tt
+++ b/views/layout.tt
@@ -35,6 +35,10 @@
                 <input type="text" class="form-control" id="description" name="description" value="[% column.description | html_entity %]">
             </div>
             <div class="form-group">
+                <label for="name_short">Short name: (<a href="" data-toggle="modal" data-target="#modalhelp_name_short">?</a>)</label>
+                <input type="text" class="form-control" id="name_short" name="name_short" value="[% column.name_short | html_entity %]">
+            </div>
+            <div class="form-group">
                 <label for="link_parent_id">Linked to field in other datasheet:</label>
                 [% IF instance_layouts.size %]
                     <select class="form-control" id="link_parent_id" name="link_parent_id">
@@ -410,6 +414,23 @@
                     </div>
                     <div class="modal-body">
                         <p>[% global.helptext.layout_match %]</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+       <!-- Modal -->
+        <div class="modal fade" id="modalhelp_name_short" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Field short names</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>[% global.helptext.name_short %]</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
